# Secret-Monero-Bridge

./: .gitignore  README.md
Docs/: Bridge-Fees  Bridge-Fees.md  Dapp.md  README.md
Multi-Sig_Consensus/: README.md
Proof-of-Concept/: README.md
Proof-of-Concept/web_application/: README.md
SecretContract/: README.md
UI/: README.md  index.js  package-lock.json  package.json
UI/public/: bundle.js  index.html
secret-contracts/: .gitignore
secret-contracts/bridge/: .gitignore  Cargo.toml  NOTICE  README.md
secret-contracts/bridge/examples/: schema.rs
secret-contracts/bridge/src/: constants.rs  contract.rs  lib.rs  msg.rs  query_messages.rs  state.rs  token_msg.rs  viewing_key.rs
secret-contracts/configurable-snip20/src/: state.rs
secret-contracts/resources/: sXMR_to_xmr.drawio
secret-contracts/sxmr-token/: Cargo.toml
secret-contracts/sxmr-token/src/: contract.rs  msg.rs
